--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,4 +9,4 @@ services:
       - 8080:8080
     volumes:
       - ./ca:/app/ca
-    #command: '/app/mitmcomp -br true'
+    #command: '/app/main -br true'
